# base-cmake

./: CMakeLists.txt  README.md
configure/: CMakeLists.txt  default.h
lib_shared/: CMakeLists.txt
lib_shared/drc/: drc.c
lib_shared/include/: drc.h
lib_static/: CMakeLists.txt
lib_static/hello/: hello.c
lib_static/include/: hello.h
modules/: CMakeLists.txt  main.c
modules/include/: test.h
modules/test/: test.c
